[gd_scene load_steps=4 format=3 uid="uid://bl0ofc0r1xkmw"]

[ext_resource type="Script" uid="uid://cnjeukc806x4h" path="res://scripts/PuzzleGame.gd" id="1_1yqxj"]
[ext_resource type="Texture2D" uid="uid://dfu6kuveldhhn" path="res://assets/interactive_background.png" id="2_qcomv"]
[ext_resource type="Texture2D" uid="uid://bc6a3woxndfyi" path="res://assets/puzzle_source.png" id="3_srcbi"]

[node name="PuzzleGame" type="Node2D"]
script = ExtResource("1_1yqxj")

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qcomv")
expand_mode = 1

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 211.0
offset_top = 182.0
offset_right = 606.0
offset_bottom = 556.0
grow_vertical = 2
columns = 5

[node name="CompletionLabel" type="Label" parent="."]
offset_left = 382.0
offset_top = 270.0
offset_right = 892.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 64
text = "Congradulations"

[node name="NextButton" type="Button" parent="."]
offset_left = 1018.0
offset_top = 632.0
offset_right = 1081.0
offset_bottom = 674.0
mouse_filter = 2
theme_override_font_sizes/font_size = 24
text = "Next"

[node name="ReferenceImage" type="TextureRect" parent="."]
visibility_layer = 16
offset_left = 789.0
offset_top = 165.0
offset_right = 1189.0
offset_bottom = 565.0
texture = ExtResource("3_srcbi")
expand_mode = 1

[node name="TimerLabel" type="Label" parent="."]
offset_left = 96.0
offset_top = 45.0
offset_right = 271.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 32
text = "Time: 00:00"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 165.0
offset_top = 634.0
offset_right = 265.0
offset_bottom = 674.0
grow_horizontal = 0
grow_vertical = 0
text = "Back"

[node name="ToggleRefButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 941.0
offset_top = 30.0
offset_right = 1041.0
offset_bottom = 80.0
grow_horizontal = 0
text = "Hint"

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ToggleRefButton" to="." method="_on_ToggleRefButton_pressed"]
